# Shopping_website_django

./: .gitignore  pyproject.toml
webshop/accounts/: admin.py  models.py  serializers.py  tests.py
webshop/shop/: models.py  serializers.py  urls.py  utils.py  views.py
webshop/stock/: admin.py  models.py  serializers.py
webshop/webshop/: settings.py  urls.py
